Change List Content

--- a/views/nature/cats_playing_music_in_the_flower_garden.html
+++ b/views/nature/cats_playing_music_in_the_flower_garden.html
@@ -48,12 +48,15 @@
                         <figure class="mb-4"><img class="img-fluid rounded" src="../../assets/img/category/nature/cats_playing_music_in_the_flower_garden.png" alt="..." /></figure>
                         <!-- Post content-->
                         <section class="mb-5">
-                            <p class="fs-5 mb-4">Science is an enterprise that should be cherished as an activity of the free human mind. Because it transforms who we are, how we live, and it gives us an understanding of our place in the universe.</p>
-                            <p class="fs-5 mb-4">The universe is large and old, and the ingredients for life as we know it are everywhere, so there's no reason to think that Earth would be unique in that regard. Whether of not the life became intelligent is a different question, and we'll see if we find that.</p>
-                            <p class="fs-5 mb-4">If you get asteroids about a kilometer in size, those are large enough and carry enough energy into our system to disrupt transportation, communication, the food chains, and that can be a really bad day on Earth.</p>
-                            <h2 class="fw-bolder mb-4 mt-5">I have odd cosmic thoughts every day</h2>
-                            <p class="fs-5 mb-4">For me, the most fascinating interface is Twitter. I have odd cosmic thoughts every day and I realized I could hold them to myself or share them with people who might be interested.</p>
-                            <p class="fs-5 mb-4">Venus has a runaway greenhouse effect. I kind of want to know what happened there because we're twirling knobs here on Earth without knowing the consequences of it. Mars once had running water. It's bone dry today. Something bad happened there as well.</p>
+                            <h2 class="fw-bolder mb-4 mt-5">[Cats playing music in the flower garden]</h2>
+                            <p class="fs-5 mb-4">
+                                <span>이 작품은 </span>
+                                <span class="font-weight-bold fw-bolder">빨간고래</span>님의 
+                                <span>원본 그림을 바탕으로 제가 프로크리에이트라는 디지털 드로잉 프로그램을 사용하여 카피 연습을 진행한 결과물입니다.</span>
+                            </p>
+                            <p class="fs-5 mb-4">빨간고래님의 그림은 저에게 큰 영감을 주었으며, 그 특유의 스타일과 표현 방식을 더 깊이 이해하고 싶어서 이와 같은 연습을 시작하게 되었습니다.</p>
+                            <p class="fs-5 mb-4">이를 통해 저는 더 다양한 시각에서 그림을 바라보고, 제 개인적인 스타일을 발전시키는 데 큰 도움을 받았습니다.</p>
+                            <p class="fs-5 mb-4">빨간고래님의 그림을 카피하면서, 저는 무엇이 좋은 그림을 만드는지, 어떻게 감정과 메시지를 시각적으로 전달할 수 있는지에 대해 많은 것을 배웠습니다.</p>
                         </section>
                     </article>
                     <!-- Start Pagenation -->
