Add Object-fit-cover to category images

--- a/views/food/food.html
+++ b/views/food/food.html
@@ -9,6 +9,8 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
         <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="../../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="../../assets/dist/css/bootstrap-utilities.min.css" rel="stylesheet">
         <link href="../../assets/dist/css/side-styles.css" rel="stylesheet">
         <link href="../../assets/dist/css/side-styles1.css" rel="stylesheet">
 
