Move bootstrap core js

--- a/views/food/santa_cats_cake.html
+++ b/views/food/santa_cats_cake.html
@@ -85,5 +85,9 @@
         <!-- Layout JS -->
         <script src="../../assets/js/listLayout.js"></script>
 
+        <!-- Bootstrap core JS-->
+        <script src="../../assets/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="../../assets/dist/js/side.js"></script>
+
     </body>
 </html>
