--- a/views/layout/list_footer.html
+++ b/views/layout/list_footer.html
@@ -10,8 +10,6 @@
     <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Starflower 2024</p></div>
 </footer>
 
-<!-- Bootstrap core JS-->
-<script src="../../assets/dist/js/bootstrap.bundle.min.js"></script>
-<script src="../../assets/dist/js/side.js"></script>
+<!-- Custom JS -->
 <script src="../../assets/js/common.js"></script>
 <script src="../../assets/js/list.js"></script>
