--- a/views/layout/list_footer.html
+++ b/views/layout/list_footer.html
@@ -11,5 +11,6 @@
 </footer>
 
 <!-- Custom JS -->
+<script src="../../assets/dist/js/side.js"></script>
 <script src="../../assets/js/common.js"></script>
 <script src="../../assets/js/list.js"></script>
