Move bootstrap core js in category

--- a/views/nature/nature.html
+++ b/views/nature/nature.html
@@ -126,5 +126,8 @@
         <!-- Layout JS -->
         <script src="../../assets/js/categoryLayout.js"></script>
 
+        <!-- Bootstrap core JS-->
+        <script src="../../assets/dist/js/bootstrap.bundle.min.js"></script>
+
     </body>
 </html>
