Starflower to MozziMeow

--- a/views/layout/category_head.html
+++ b/views/layout/category_head.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-<meta name="description" content="Starflower Illustration Album" />
-<meta name="author" content="Starflower" />
-<title>Starflower Illustration Post</title>
+<meta name="description" content="MozziMeow Illustration Album" />
+<meta name="author" content="MozziMeow" />
+<title>MozziMeow Illustration Post</title>
 <!-- Favicon-->
 <!-- <link rel="icon" type="image/x-icon" href="assets/favicon.ico" /> -->
