--- a/views/layout/list_header.html
+++ b/views/layout/list_header.html
@@ -1,7 +1,7 @@
 <!-- Responsive navbar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
     <div class="container">
-        <a class="navbar-brand" href="../../">Starflower Illustration</a>
+        <a class="navbar-brand" href="../../">MozziMeow Illustration</a>
         <div class="d-flex justify-content-between">
             <a class="custom-toggle-sidebar-btn" href="javascript:void(0)">
                 <span class="navbar-toggler-icon"></span>
