--- a/views/nature/a_cat_lying_on_the_grass.html
+++ b/views/nature/a_cat_lying_on_the_grass.html
@@ -31,7 +31,7 @@
                     <!-- Post title-->
                     <h1 class="fw-bolder mb-1">Welcome to Post Nature!</h1>
                     <!-- Post meta content-->
-                    <div class="text-muted fst-italic mb-2">Posted on April 24, 2024 by Starflower</div>
+                    <div class="text-muted fst-italic mb-2">Posted on April 24, 2024 by MozziMeow</div>
                     <!-- Post categories-->
                     <a class="badge bg-secondary text-decoration-none link-light">Illustration</a>
                     <a class="badge bg-secondary text-decoration-none link-light">Freebies</a>
