--- a/views/layout/list_head.html
+++ b/views/layout/list_head.html
@@ -1,7 +1,9 @@
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-<meta name="description" content="MozziMeow Illustration Album" />
-<meta name="author" content="MozziMeow" />
+<meta charset="utf-8">
+<meta name="author" content="MozziMeow">
+<meta name="description" content="MozziMeow Illustration">
+<meta name="keyword" content="MozziMeow,Illustration,Mozzi,Meow,Album">
+<meta name="generator" content="only html">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>MozziMeow Illustration Post</title>
 <!-- Favicon-->
 <!-- <link rel="icon" type="image/x-icon" href="assets/favicon.ico" /> -->
