--- a/views/layout/list_head.html
+++ b/views/layout/list_head.html
@@ -5,5 +5,8 @@
 <meta name="generator" content="only html">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>MozziMeow Illustration Post</title>
+
+<link rel="canonical" href="https://hanyujeong.github.io/MozziMeow">
+
 <!-- Favicon-->
 <!-- <link rel="icon" type="image/x-icon" href="assets/favicon.ico" /> -->
