Change canonical link

--- a/views/layout/category_head.html
+++ b/views/layout/category_head.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>MozziMeow Illustration Post</title>
 
-<link rel="canonical" href="https://hanyujeong.github.io/MozziMeow">
+<link rel="canonical" href="https://hanyujeong.github.io/MozziMeow/index.html">
 
 <!-- Favicon-->
 <!-- <link rel="icon" type="image/x-icon" href="assets/favicon.ico" /> -->
