--- a/views/nature/happy_cat_couple_in_flowers.html
+++ b/views/nature/happy_cat_couple_in_flowers.html
@@ -47,10 +47,10 @@
                     <!-- Post content-->
                     <article>
                         <!-- Preview image figure-->
-                        <figure class="mb-4"><img class="img-fluid rounded" src="../../assets/img/category/nature/happy_flowers.png" alt="..." /></figure>
+                        <figure class="mb-4"><img class="img-fluid rounded" src="../../assets/img/category/nature/happy_cat_couple_in_flowers.png" alt="..." /></figure>
                         <!-- Post content-->
                         <section class="mb-5">
-                            <h2 class="fw-bolder mb-4 mt-5">[Happy flowers]</h2>
+                            <h2 class="fw-bolder mb-4 mt-5">[Happy cat couple in flowers]</h2>
                             <p class="fs-5 mb-4">
                                 <span>이 작품은 </span>
                                 <span class="font-weight-bold fw-bolder">빨간고래</span>님의 
