Add It's Cake day

--- a/views/food/It's_cake_day.html
+++ b/views/food/It's_cake_day.html
@@ -31,7 +31,7 @@
                     <!-- Post title-->
                     <h1 class="fw-bolder mb-1">Welcome to Post Food!</h1>
                     <!-- Post meta content-->
-                    <div class="text-muted fst-italic mb-2">Posted on April 24, 2024 by MozziMeow</div>
+                    <div class="text-muted fst-italic mb-2">Posted on May 29, 2024 by MozziMeow</div>
                     <!-- Post categories-->
                     <a class="badge bg-secondary text-decoration-none link-light">Illustration</a>
                     <a class="badge bg-secondary text-decoration-none link-light">Freebies</a>
@@ -47,15 +47,15 @@
                     <!-- Post content-->
                     <article>
                         <!-- Preview image figure-->
-                        <figure class="mb-4"><img class="img-fluid rounded" src="../../assets/img/category/food/santa_cats_cake.png" alt="..." /></figure>
+                        <figure class="mb-4"><img class="img-fluid rounded" src="../../assets/img/category/food/It's_cake_day.png" alt="..." /></figure>
                         <!-- Post content-->
                         <section class="mb-5">
-                            <p class="fs-5 mb-4">Science is an enterprise that should be cherished as an activity of the free human mind. Because it transforms who we are, how we live, and it gives us an understanding of our place in the universe.</p>
-                            <p class="fs-5 mb-4">The universe is large and old, and the ingredients for life as we know it are everywhere, so there's no reason to think that Earth would be unique in that regard. Whether of not the life became intelligent is a different question, and we'll see if we find that.</p>
-                            <p class="fs-5 mb-4">If you get asteroids about a kilometer in size, those are large enough and carry enough energy into our system to disrupt transportation, communication, the food chains, and that can be a really bad day on Earth.</p>
-                            <h2 class="fw-bolder mb-4 mt-5">I have odd cosmic thoughts every day</h2>
-                            <p class="fs-5 mb-4">For me, the most fascinating interface is Twitter. I have odd cosmic thoughts every day and I realized I could hold them to myself or share them with people who might be interested.</p>
-                            <p class="fs-5 mb-4">Venus has a runaway greenhouse effect. I kind of want to know what happened there because we're twirling knobs here on Earth without knowing the consequences of it. Mars once had running water. It's bone dry today. Something bad happened there as well.</p>
+                            <h2 class="fw-bolder mb-4 mt-5">[It's cake day]</h2>
+                            <p class="fs-5 mb-4">
+                                <span>이 작품은 </span>
+                                <span class="font-weight-bold fw-bolder">빨간고래</span>님의 
+                                <span>원본 그림을 바탕으로 제가 프로크리에이트라는 디지털 드로잉 프로그램을 사용하여 카피 연습을 진행한 결과물입니다.</span>
+                            </p>
                         </section>
                     </article>
                     <!-- Start Pagenation -->
@@ -87,6 +87,6 @@
 
         <!-- Bootstrap core JS-->
         <script src="../../assets/dist/js/bootstrap.bundle.min.js"></script>
-        
+
     </body>
 </html>
